--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,17 @@
 {% block title %}Login - REPASA{% endblock %}
 
 {% block content %}
-    <h1 class="mt-5">Página de Login</h1>
-    <!--  -->
+    <h1 class="mt-5">Login Clientes</h1>
+    
+    <form method="post" action="{{ url_for('login') }}" class="mt-4">
+        <div class="form-group">
+            <label for="username">Usuario:</label>
+            <input type="text" id="username" name="username" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+    </form>
 {% endblock %}
