--- a/templates/login.html
+++ b/templates/login.html
@@ -4,17 +4,26 @@
 {% block title %}Login - REPASA{% endblock %}
 
 {% block content %}
-    <h1 class="mt-5">Login Clientes</h1>
-    
-    <form method="post" action="{{ url_for('login') }}" class="mt-4">
-        <div class="form-group">
-            <label for="username">Usuario:</label>
-            <input type="text" id="username" name="username" class="form-control" required>
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h1 class="mt-2">Login Clientes</h1>
+                </div>
+                <div class="card-body">
+                    <form method="post" action="{{ url_for('login') }}">
+                        <div class="form-group">
+                            <label for="username">Usuario</label>
+                            <input type="text" name="username" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Contraseña</label>
+                            <input type="password" name="password" class="form-control" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-    </form>
+    </div>
 {% endblock %}
