--- a/templates/product_list_paginated-1.html
+++ b/templates/product_list_paginated-1.html
@@ -1,3 +1,5 @@
+{% comment %} Antigua version sin carrito {% endcomment %}
+
 <!-- templates/product_list_paginated.html -->
 {% extends 'base.html' %}
 
@@ -12,15 +14,12 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">Precio: Q{{ product.price }}</p>
-                        <form action="{{ url_for('add_to_cart', product_id=product.id) }}" method="post">
-                            <button type="submit" class="btn btn-primary">Agregar al carrito</button>
-                        </form>
                     </div>
                 </div>
             </div>
         {% endfor %}
     </div>
-
+    
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center mt-3">
             {% for p in range(1, total_pages + 1) %}
@@ -34,11 +33,6 @@
             {% endfor %}
         </ul>
     </nav>
-
-    <a class="btn btn-secondary mt-3" href="{{ url_for('view_cart') }}">Ver Carrito</a>
-
-    <div class="mt-4">
-        <p>Carrito: {{ cart_size }} productos</p>
-        <p>Total: ${{ total_price }}</p>
-    </div>
+    
+    <a class="btn btn-secondary mt-3" href="{{ url_for('index') }}">Volver al inicio</a>
 {% endblock %}
