--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,8 @@
     <h1 class="mt-5">Bienvenido a REPASA S.A. </h1>
     <p class="lead"><a class="btn btn-primary" href="{{ url_for('product_list') }}">Ver productos</a></p>
 
-     <img width="500px" src="/img.png" alt="Logo de REPASA">
+     <img width="1200px" src="http://imgfz.com/i/Yvin7er.png" alt="Logo de REPASA">
+     <img width="1200px" src="http://imgfz.com/i/slAVBWD.png" alt="marcas1">
+     <img width="1200px" src="http://imgfz.com/i/RgW8Ld7.png" alt="marcas2">
+     <img width="1200px" src="http://imgfz.com/i/r6fkR38.png" alt="vision">
 {% endblock %}
