--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,94 @@
 {% block title %}Inicio - REPASA{% endblock %}
 
 {% block content %}
-    <h1 class="mt-5">Bienvenido a REPASA S.A. </h1>
-    <p class="lead"><a class="btn btn-primary" href="{{ url_for('product_list') }}">Ver productos</a></p>
+    <div class="text-center">
+        <h1 class="mt-5 display-4">Bienvenido a REPASA S.A.</h1>
+        <p class="lead">
+            <a class="btn btn-primary" href="{{ url_for('product_list') }}">Ver productos</a>
+        </p>
+    </div>
 
-     <img width="1200px" src="http://imgfz.com/i/Yvin7er.png" alt="Logo de REPASA">
-     <img width="1200px" src="http://imgfz.com/i/slAVBWD.png" alt="marcas1">
-     <img width="1200px" src="http://imgfz.com/i/RgW8Ld7.png" alt="marcas2">
-     <img width="1200px" src="http://imgfz.com/i/r6fkR38.png" alt="vision">
+    <div id="imageCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#imageCarousel" data-slide-to="1"></li>
+            <li data-target="#imageCarousel" data-slide-to="2"></li>
+            <li data-target="#imageCarousel" data-slide-to="3"></li>
+            <li data-target="#imageCarousel" data-slide-to="4"></li>
+            <li data-target="#imageCarousel" data-slide-to="5"></li>
+            <li data-target="#imageCarousel" data-slide-to="6"></li>
+            <li data-target="#imageCarousel" data-slide-to="7"></li>
+            <li data-target="#imageCarousel" data-slide-to="8"></li>
+            <li data-target="#imageCarousel" data-slide-to="9"></li>
+            <li data-target="#imageCarousel" data-slide-to="10"></li>
+            <li data-target="#imageCarousel" data-slide-to="11"></li>
+            <li data-target="#imageCarousel" data-slide-to="12"></li>
+            <li data-target="#imageCarousel" data-slide-to="13"></li>
+            <li data-target="#imageCarousel" data-slide-to="14"></li>
+            <li data-target="#imageCarousel" data-slide-to="15"></li>
+            <li data-target="#imageCarousel" data-slide-to="16"></li>
+            <li data-target="#imageCarousel" data-slide-to="17"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="http://imgfz.com/i/Yvin7er.png" alt="Logo de REPASA">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/slAVBWD.png" alt="marcas1">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/7Sey91U.jpeg" alt="ate">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/8ncuHWj.jpeg" alt="blueprint">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/rW2IRms.jpeg" alt="bocherinni">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/DjciuSl.jpeg" alt="bocherinni">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/50DpbvH.jpeg" alt="exotica">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/v05bwLK.jpeg" alt="febi">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/cyLb3Ip.jpeg" alt="formula">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/LlSJb8d.jpeg" alt="navcar">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/tqSD1vx.jpeg" alt="gunk">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/PwJXqRS.jpeg" alt="hardex">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/oSHihJj.jpeg" alt="johnsens">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/SGXdQ2U.jpeg" alt="majic">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/9s68z7G.jpeg" alt="redfox">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/690hCou.jpeg" alt="spritz">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="http://imgfz.com/i/r6fkR38.png" alt="vision">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 {% endblock %}
