--- a/templates/index.html
+++ b/templates/index.html
@@ -94,4 +94,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <div class="text-center mt-3">
+        <p class="lead">©2024. Repasa, S.A. Reservados Todos los Derechos.</p>
+    </div>
 {% endblock %}
