--- a/templates/product_list_paginated.html
+++ b/templates/product_list_paginated.html
@@ -5,6 +5,14 @@
 
 {% block content %}
     <h1 class="mt-5 text-center">Lista de Productos</h1>
+
+    <div class="container mt-3">
+        <form class="form-inline my-2 my-lg-0" action="{{ url_for('search_products') }}" method="GET">
+            <input class="form-control mr-sm-2" type="search" placeholder="Buscar productos" aria-label="Search" name="query">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+        </form>
+    </div>
+
     <div class="row mt-3">
         {% for product in products %}
             <div class="col-md-4 mb-4">
@@ -37,11 +45,10 @@
     </nav>
 
     <a class="btn btn-secondary mt-3" href="{{ url_for('view_cart') }}">Ver Carrito</a>
+    <a class="btn btn-secondary mt-3" href="{{ url_for('index') }}">Regresar a Inicio</a>
 
     <div class="mt-4">
         <p>Carrito: {{ cart_size }} productos</p>
         <p>Total: Q{{ total_price }}</p>
     </div>
 {% endblock %}
-
-
