--- a/templates/product_list_paginated.html
+++ b/templates/product_list_paginated.html
@@ -40,7 +40,7 @@
 
     <div class="mt-4">
         <p>Carrito: {{ cart_size }} productos</p>
-        <p>Total: ${{ total_price }}</p>
+        <p>Total: Q{{ total_price }}</p>
     </div>
 {% endblock %}
 
