--- a/templates/index.html
+++ b/templates/index.html
@@ -1,131 +1,36 @@
-<!-- templates/index.html -->
+<!-- templates/login.html -->
 {% extends 'base.html' %}
 
-{% block title %}Inicio - REPASA{% endblock %}
+{% block title %}Login - REPASA{% endblock %}
 
 {% block content %}
 <br>
 <br>
 
-<div class="container mt-5">
-    <div class="text-center">
-        <h1 class="display-4 mb-4">Bienvenido a REPASA S.A.</h1>
-        <p class="lead">
-            <a class="btn btn-danger btn-lg" href="{{ url_for('login') }}">Iniciar Sesión</a>
-        </p>
-    </div>
-</div>
-
-
-    <div id="imageCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#imageCarousel" data-slide-to="1"></li>
-            <li data-target="#imageCarousel" data-slide-to="2"></li>
-            <li data-target="#imageCarousel" data-slide-to="3"></li>
-            <li data-target="#imageCarousel" data-slide-to="4"></li>
-            <li data-target="#imageCarousel" data-slide-to="5"></li>
-            <li data-target="#imageCarousel" data-slide-to="6"></li>
-            <li data-target="#imageCarousel" data-slide-to="7"></li>
-            <li data-target="#imageCarousel" data-slide-to="8"></li>
-            <li data-target="#imageCarousel" data-slide-to="9"></li>
-            <li data-target="#imageCarousel" data-slide-to="10"></li>
-            <li data-target="#imageCarousel" data-slide-to="11"></li>
-            <li data-target="#imageCarousel" data-slide-to="12"></li>
-            <li data-target="#imageCarousel" data-slide-to="13"></li>
-            <li data-target="#imageCarousel" data-slide-to="14"></li>
-            <li data-target="#imageCarousel" data-slide-to="15"></li>
-            <li data-target="#imageCarousel" data-slide-to="16"></li>
-            <li data-target="#imageCarousel" data-slide-to="17"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="http://imgfz.com/i/Yvin7er.png" alt="Logo de REPASA">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/slAVBWD.png" alt="marcas1">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/7Sey91U.jpeg" alt="ate">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/8ncuHWj.jpeg" alt="blueprint">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/rW2IRms.jpeg" alt="bocherinni">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/DjciuSl.jpeg" alt="bocherinni">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/50DpbvH.jpeg" alt="exotica">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/v05bwLK.jpeg" alt="febi">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/cyLb3Ip.jpeg" alt="formula">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/LlSJb8d.jpeg" alt="navcar">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/tqSD1vx.jpeg" alt="gunk">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/PwJXqRS.jpeg" alt="hardex">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/oSHihJj.jpeg" alt="johnsens">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/SGXdQ2U.jpeg" alt="majic">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/9s68z7G.jpeg" alt="redfox">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/690hCou.jpeg" alt="spritz">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="http://imgfz.com/i/r6fkR38.png" alt="vision">
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <h1 class="mt-2">Login Clientes</h1>
+                    <img src="http://imgfz.com/i/r13OzBp.jpeg" alt="Logo repasa" class="img-fluid mt-1">
+                </div>
+                <div class="card-body">
+                    <form method="post" action="{{ url_for('login') }}">
+                        <div class="form-group">
+                            <label for="username">Usuario</label>
+                            <input type="text" name="username" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Contraseña</label>
+                            <input type="password" name="password" class="form-control" required>
+                        </div>
+                        <button type="submit" class="btn btn-danger">Iniciar Sesión</button>
+                    </form>
+                </div>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
     <div class="text-center mt-3">
         <p class="lead">©2024. Repasa, S.A. Reservados Todos los Derechos.</p>
     </div>
-    <div class="jumbotron jumbotron-fluid mt-4">
-        <div class="container text-center">
-            <h2 class="display-5">Descubre Quiénes Somos</h2>
-        </div>
-    </div>
-
-        <!-- Tarjeta de Misión -->
-        <div class="card mt-3">
-            <div class="card-body">
-                <h5 class="card-title">Misión</h5>
-                <p class="card-text">Satisfacer a nuestros clientes por medio de productos de la mejor calidad e importados que permitirá aumentar sus oportunidades de venta y así mantener la confianza hacia la empresa.</p>
-                <br>
-            </div>
-        </div>
-
-        <!-- Tarjeta de Visión -->
-        <div class="card mt-3">
-            <div class="card-body">
-                <h5 class="card-title">Visión</h5>
-                <p class="card-text">Ser líder en la distribución de productos de calidad a nivel nacional por medio de nuestros distribuidores para llegar al cliente final con satisfacción.</p>
-            </div>
-        </div>
-    </div>
-
-
 {% endblock %}
