--- a/templates/product_list_paginated.html
+++ b/templates/product_list_paginated.html
@@ -4,10 +4,12 @@
 {% block title %}Productos - REPASA{% endblock %}
 
 {% block content %}
+<br>
+<br>
     <h1 class="mt-5 text-center">Lista de Productos</h1>
 
     <div class="container mt-3">
-        <form class="form-inline my-2 my-lg-0" action="{{ url_for('search_products') }}" method="GET">
+        <form class="form-inline my-2 my-lg-0 justify-content-center mx-auto" action="{{ url_for('search_products') }}" method="GET">
             <input class="form-control mr-sm-2" type="search" placeholder="Buscar productos" aria-label="Search" name="query">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </form>
@@ -15,14 +17,22 @@
 
     <div class="row mt-3">
         {% for product in products %}
-            <div class="col-md-4 mb-4">
-                <div class="card">
+            <div class="col-md-3 mb-3">
+                <div class="card h-100">
+                    <img src="{{ product.image_url }}" class="card-img-top img-fixed-size zoomable" alt="Imagen del producto">
                     <div class="card-body">
-                        <h5 class="card-title">{{ product.name }}</h5>
-                        <p class="card-text">Precio: Q{{ product.price }}</p>
+                        <!-- Contenido principal de la tarjeta -->
+                    </div>
+                    <div class="card-footer text-center">
+                        <!-- Segundo card-footer con precio, cantidad y descripción -->
+                        <p class="card-text">{{product.name}}</p>
                         <p class="card-text">Descripción: {{ product.description }}</p>
+                        <p class="card-text">Precio: Q{{ product.price }}</p>
+                    </div>
+                    <div class="card-footer text-center">
+                        <!-- Primer card-footer con el botón "Agregar al carrito" -->
                         <form action="{{ url_for('add_to_cart', product_id=product.id) }}" method="post">
-                            <button type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                            <button type="submit" class="btn btn-danger">Agregar al carrito</button>
                         </form>
                     </div>
                 </div>
@@ -44,7 +54,7 @@
         </ul>
     </nav>
 
-    <a class="btn btn-secondary mt-3" href="{{ url_for('view_cart') }}">Ver Carrito</a>
+    <a class="btn btn-danger mt-3" href="{{ url_for('view_cart') }}">Ver Carrito</a>
     <a class="btn btn-secondary mt-3" href="{{ url_for('index') }}">Regresar a Inicio</a>
 
     <div class="mt-4">
