--- a/templates/search_products.html
+++ b/templates/search_products.html
@@ -16,25 +16,26 @@
     <div class="row mt-3">
         {% if search_results %}
             {% for product in search_results %}
-                <div class="col-md-4 mb-4">
-                    <div class="card">
+                <div class="col-md-3 mb-3">
+                    <div class="card h-100">
+                        <img src="{{ product.image_url }}" class="card-img-top img-fluid" alt="Imagen del producto">
                         <div class="card-body">
                             <h5 class="card-title">{{ product.name }}</h5>
-                            <p class="card-text">Precio: Q{{ product.price }}</p>
                             <p class="card-text">Descripción: {{ product.description }}</p>
-                            <form action="{{ url_for('add_to_cart', product_id=product.id) }}" method="post">
-                                <button type="submit" class="btn btn-secondary">Agregar al carrito</button>
-                            </form>
-                            
+                            <p class="card-text">Precio: Q{{ product.price }}</p>
                         </div>
-                        
+                        <div class="card-footer text-center">
+                            <form action="{{ url_for('add_to_cart', product_id=product.id) }}" method="post">
+                                <button type="submit" class="btn btn-danger">Agregar al carrito</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             {% endfor %}
         {% else %}
             <p class="lead">No se encontraron resultados.</p>
         {% endif %}
-        
     </div>
+    
     <a class="btn btn-secondary mt-3" href="{{ url_for('product_list') }}">Regresar a Productos</a>   
 {% endblock %}
