--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <!-- ... (otros encabezados) ... -->
+   
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap">
     <style>
         body {
-            background-color: #ddd; /* Cambia este valor al tono de gris que desees */
+            background-color: #ddd; /* mod */
         }
 
         .navbar-nav .nav-link {
-            font-size: 20px; /* Ajusta el tamaño de la fuente según tus preferencias */
+            font-size: 20px; /* mod */
         }
     </style>
 </head>
